--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -2,6 +2,7 @@ name: GitHub Snake Game
 
 on:
   # Schedule the workflow to run daily at midnight UTC
+  workflow_dispatch:  
   schedule:
     - cron: "0 0 * * *"
 
